# python-ssh-gui

./: README.md  pyproject.toml  requirements.txt  saved-sessions.json  setup-dev-env.sh
src/: main.py
src/component/: ServerCard.py  __init__.py
src/components/: AddControlCard.py  ConnectionCard.py  EditControlCard.py  __init__.py
src/dto/: ConnectionInfoDto.py  ServerInfoDto.py  __init__.py
src/ssh/: __init__.py  fedora_ssh.py  ssh.exp  sus.txt
src/ssh/cache/: connection_cache.py
src/util/: file.py  logger.py
