[project]
name = "python-ssh-gui"
version = "0.1.0-beta"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Saskia", email = ":)" }
]
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "arrow==1.3.0",
  "binaryornot==0.4.4",
  "certifi==2025.7.9",
  "chardet==5.2.0",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "cookiecutter==2.6.0",
  "distro==1.9.0",
  "fastapi==0.116.1",
  "flet==0.28.3",
  "flet-cli==0.28.3",
  "flet-desktop-light==0.28.3",
  "flet-web==0.28.3",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "idna==3.10",
  "jinja2==3.1.6",
  "markdown-it-py==3.0.0",
  "markupsafe==3.0.2",
  "mdurl==0.1.2",
  "oauthlib==3.3.1",
  "packaging==25.0",
  "pexpect==4.9.0",
  "ptyprocess==0.7.0",
  "pydantic==2.11.7",
  "pydantic-core==2.33.2",
  "pygments==2.19.2",
  "pypng==0.20220715.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.1",
  "python-slugify==8.0.4",
  "pyyaml==6.0.2",
  "qrcode==7.4.2",
  "repath==0.9.0",
  "requests==2.32.4",
  "rich==14.0.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "starlette==0.47.1",
  "text-unidecode==1.3",
  "toml==0.10.2",
  "types-python-dateutil==2.9.0.20250708",
  "typing-inspection==0.4.1",
  "typing-extensions==4.14.1",
  "urllib3==2.5.0",
  "uvicorn==0.35.0",
  "uvloop==0.21.0",
  "watchdog==4.0.2",
  "watchfiles==1.1.0",
  "websockets==15.0.1",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "tech.saskia"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "python-ssh-gui"

# company name to display in about app dialogs
company = "?"

# copyright text to display in about app dialogs
copyright = "Copyright (C) by Saskia"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
